--- a/PracticeUIActivityIndicatorView/Base.lproj/Main.storyboard
+++ b/PracticeUIActivityIndicatorView/Base.lproj/Main.storyboard
@@ -20,47 +20,33 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="51"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X3h-8f-mQd">
+                                <rect key="frame" x="16" y="195" width="382" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="kxc-JP-Fsz">
                                 <rect key="frame" x="197" y="438" width="20" height="20"/>
                             </activityIndicatorView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="AKS-gi-RWh">
-                                <rect key="frame" x="16" y="111" width="382" height="451"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3SF-94-zAu">
-                                        <rect key="frame" x="0.0" y="0.0" width="382" height="350"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="350" id="sqa-sH-dC9"/>
-                                            <constraint firstAttribute="width" secondItem="3SF-94-zAu" secondAttribute="height" multiplier="1:1" id="uqj-MQ-fls"/>
-                                        </constraints>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="255" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lU4-yd-a3l">
-                                        <rect key="frame" x="0.0" y="358" width="382" height="93"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="lrd-hX-rYl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0sf-tt-oxH"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="AKS-gi-RWh" secondAttribute="bottom" constant="300" id="A16-8D-HSJ"/>
                             <constraint firstItem="kxc-JP-Fsz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Fxf-oZ-dgt"/>
-                            <constraint firstItem="AKS-gi-RWh" firstAttribute="top" secondItem="lrd-hX-rYl" secondAttribute="bottom" constant="16" id="SOy-6a-WHk"/>
-                            <constraint firstItem="AKS-gi-RWh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="VlE-JJ-s69"/>
+                            <constraint firstItem="X3h-8f-mQd" firstAttribute="top" secondItem="lrd-hX-rYl" secondAttribute="bottom" constant="100" id="HMF-Ec-AdI"/>
                             <constraint firstItem="kxc-JP-Fsz" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="dDT-fN-Yp3"/>
                             <constraint firstItem="lrd-hX-rYl" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ePU-9U-GqA"/>
                             <constraint firstItem="lrd-hX-rYl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="hEo-h4-doK"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="AKS-gi-RWh" secondAttribute="trailing" constant="16" id="lQs-rV-K2e"/>
+                            <constraint firstItem="X3h-8f-mQd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="16" id="jwa-zq-AK3"/>
+                            <constraint firstAttribute="trailing" secondItem="X3h-8f-mQd" secondAttribute="trailing" constant="16" id="qkR-Cm-QLk"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="indicator" destination="kxc-JP-Fsz" id="InS-OH-MLI"/>
-                        <outlet property="pokemonImage" destination="3SF-94-zAu" id="fkN-oT-ocJ"/>
-                        <outlet property="pokemonNameLabel" destination="lU4-yd-a3l" id="HCJ-DU-7f1"/>
                         <outlet property="searchBar" destination="lrd-hX-rYl" id="38h-Yb-LUF"/>
+                        <outlet property="userNameLabel" destination="X3h-8f-mQd" id="q6T-2i-7fu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
